--- a/main.html
+++ b/main.html
@@ -9,6 +9,50 @@
 </head>
 <body>
     <!-- add table here -->
+	<table>
+		<thead class="first">
+			<th>NAME</th>
+			<th>KILLS</th>
+			<th>SAVED</th>
+			<th>DEATHS</th>
+			<th>REVIVES</th>
+			<th>WINS</th>
+		</thead>
+		<tbody>
+			<tr class="row1">
+	<td>Hackerman</td>
+	<td>10</td>
+    <td>0</td>
+    <td>1</td>
+    <td>0</td>
+    <td>0</td>
+			</tr>
+			<tr class="row2">
+	<td>Cool Doggo</td>
+    <td>13</td>
+    <td>4</td>
+    <td>8</td>
+    <td>7</td>
+    <td>1</td>
+			</tr>
+			<tr class="row3">
+	<td>Andrews</td>
+    <td>19</td>
+    <td>2</td>
+    <td>10</td>
+    <td>11</td>
+    <td>0</td>
+			</tr>
+			<tr class="row4">
+	<td>Strawberry</td>
+    <td>2</td>
+    <td>9</td>
+    <td>3</td>
+    <td>5</td>
+    <td>1</td>
+			</tr>
+		</tbody>
+	</table>
 
         
 </body>
